[gd_scene load_steps=3 format=4 uid="uid://d2ectm23ulm50"]

[ext_resource type="TileSet" uid="uid://degtrdfi1sc00" path="res://Tileset/Levels/CPZ.tres" id="1_1wc77"]
[ext_resource type="Script" uid="uid://bh6tt5g5yxwj8" path="res://Scripts/Backgrounds/15_death_egg.gd" id="1_syxry"]

[node name="15-deathEgg" type="ParallaxBackground"]
scroll_base_scale = Vector2(0, 0.9)
script = ExtResource("1_syxry")

[node name="EarthLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(512, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="EarthLayer"]
tile_map_data = PackedByteArray("AAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAwAAgAAAAAAAAAAAA0AAgAAAAAAAAAAAA4AAgAAAAAAAAAAAA8AAgAAAAAAAAABAAgAAgAAAAAAAAABAAkAAgAAAAAAAAABAAoAAgAAAAAAAAABAAsAAgAAAAAAAAABAAwAAgAAAAAAAAABAA0AAgAAAAAAAAABAA4AAgAAAAAAAAABAA8AAgAAAAAAAAACAAgAAgAAAAAAAAACAAkAAgAAAAAAAAACAAoAAgAAAAAAAAACAAsAAgAAAAAAAAACAAwAAgAAAAAAAAACAA0AAgAAAAAAAAACAA4AAgAAAAAAAAACAA8AAgAAAAAAAAADAAgAAgAAAAAAAAADAAkAAgAAAAAAAAADAAoAAgAAAAAAAAADAAsAAgAAAAAAAAADAAwAAgAAAAAAAAADAA0AAgAAAAAAAAADAA4AAgAAAAAAAAADAA8AAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAsAAgAAAAAAAAAEAAwAAgAAAAAAAAAEAA0AAgAAAAAAAAAEAA4AAgAAAAAAAAAEAA8AAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAkAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAsAAgAAAAAAAAAFAAwAAgAAAAAAAAAFAA0AAgAAAAAAAAAFAA4AAgAAAAAAAAAFAA8AAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAsAAgAAAAAAAAAGAAwAAgAAAAAAAAAGAA0AAgAAAAAAAAAGAA4AAgAAAAAAAAAGAA8AAgAAAAAAAAAHAAgAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAoAAgAAAAAAAAAHAAsAAgAAAAAAAAAHAAwAAgAAAAAAAAAHAA0AAgAAAAAAAAAHAA4AAgAAAAAAAAAHAA8AAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAkAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAsAAgAAAAAAAAAIAAwAAgAAAAAAAAAIAA0AAgAAAAAAAAAIAA4AAgAAAAAAAAAIAA8AAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAkAAgAAAAAAAAAJAAoAAgAAAAAAAAAJAAsAAgAAAAAAAAAJAAwAAgAAAAAAAAAJAA0AAgAAAAAAAAAJAA4AAgAAAAAAAAAJAA8AAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAsAAgAAAAAAAAAKAAwAAgAAAAAAAAAKAA0AAgAAAAAAAAAKAA4AAgAAAAAAAAAKAA8AAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAALAAoAAgAAAAAAAAALAAsAAgAAAAAAAAALAAwAAgAAAAAAAAALAA0AAgAAAAAAAAALAA4AAgAAAAAAAAALAA8AAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAAsAAgAAAAAAAAAMAAwAAgAAAAAAAAAMAA0AAgAAAAAAAAAMAA4AAgAAAAAAAAAMAA8AAgAAAAAAAAANAAgAAgAAAAAAAAANAAkAAgAAAAAAAAANAAoAAgAAAAAAAAANAAsAAgAAAAAAAAANAAwAAgAAAAAAAAANAA0AAgAAAAAAAAANAA4AAgAAAAAAAAANAA8AAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAkAAgAAAAAAAAAOAAoAAgAAAAAAAAAOAAsAAgAAAAAAAAAOAAwAAgAAAAAAAAAOAA0AAgAAAAAAAAAOAA4AAgAAAAAAAAAOAA8AAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAkAAgAAAAAAAAAPAAoAAgAAAAAAAAAPAAsAAgAAAAAAAAAPAAwAAgAAAAAAAAAPAA0AAgAAAAAAAAAPAA4AAgAAAAAAAAAPAA8AAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAAQAAoAAgAAAAAAAAAQAAsAAgAAAAAAAAAQAAwAAgAAAAAAAAAQAA0AAgAAAAAAAAAQAA4AAgAAAAAAAAAQAA8AAgAAAAAAAAARAAgAAgAAAAAAAAARAAkAAgAAAAAAAAARAAoAAgAAAAAAAAARAAsAAgAAAAAAAAARAAwAAgAAAAAAAAARAA0AAgAAAAAAAAARAA4AAgAAAAAAAAARAA8AAgAAAAAAAAASAAgAAgAAAAAAAAASAAkAAgAAAAAAAAASAAoAAgAAAAAAAAASAAsAAgAAAAAAAAASAAwAAgAAAAAAAAASAA0AAgAAAAAAAAASAA4AAgAAAAAAAAASAA8AAgAAAAAAAAATAAgAAgAAAAAAAAATAAkAAgAAAAAAAAATAAoAAgAAAAAAAAATAAsAAgAAAAAAAAATAAwAAgAAAAAAAAATAA0AAgAAAAAAAAATAA4AAgAAAAAAAAATAA8AAgAAAAAAAAAUAAgAAgAAAAAAAAAUAAkAAgAAAAAAAAAUAAoAAgAAAAAAAAAUAAsAAgAAAAAAAAAUAAwAAgAAAAAAAAAUAA0AAgAAAAAAAAAUAA4AAgAAAAAAAAAUAA8AAgAAAAAAAAAVAAgAAgAAAAAAAAAVAAkAAgAAAAAAAAAVAAoAAgAAAAAAAAAVAAsAAgAAAAAAAAAVAAwAAgAAAAAAAAAVAA0AAgAAAAAAAAAVAA4AAgAAAAAAAAAVAA8AAgAAAAAAAAAWAAgAAgAAAAAAAAAWAAkAAgAAAAAAAAAWAAoAAgAAAAAAAAAWAAsAAgAAAAAAAAAWAAwAAgAAAAAAAAAWAA0AAgAAAAAAAAAWAA4AAgAAAAAAAAAWAA8AAgAAAAAAAAAXAAgAAgAAAAAAAAAXAAkAAgAAAAAAAAAXAAoAAgAAAAAAAAAXAAsAAgAAAAAAAAAXAAwAAgAAAAAAAAAXAA0AAgAAAAAAAAAXAA4AAgAAAAAAAAAXAA8AAgAAAAAAAAAYAAgAAgAAAAAAAAAYAAkAAgAAAAAAAAAYAAoAAgAAAAAAAAAYAAsAAgAAAAAAAAAYAAwAAgAAAAAAAAAYAA0AAgAAAAAAAAAYAA4AAgAAAAAAAAAYAA8AAgAAAAAAAAAZAAgAAgAAAAAAAAAZAAkAAgAAAAAAAAAZAAoAAgAAAAAAAAAZAAsAAgAAAAAAAAAZAAwAAgAAAAAAAAAZAA0AAgAAAAAAAAAZAA4AAgAAAAAAAAAZAA8AAgAAAAAAAAAaAAgAAgAAAAAAAAAaAAkAAgAAAAAAAAAaAAoAAgAAAAAAAAAaAAsAAgAAAAAAAAAaAAwAAgAAAAAAAAAaAA0AAgAAAAAAAAAaAA4AAgAAAAAAAAAaAA8AAgAAAAAAAAAbAAgAAgAAAAAAAAAbAAkAAgAAAAAAAAAbAAoAAgAAAAAAAAAbAAsAAgAAAAAAAAAbAAwAAgAAAAAAAAAbAA0AAgAAAAAAAAAbAA4AAgAAAAAAAAAbAA8AAgAAAAAAAAAcAAgAAgAAAAAAAAAcAAkAAgAAAAAAAAAcAAoAAgAAAAAAAAAcAAsAAgAAAAAAAAAcAAwAAgAAAAAAAAAcAA0AAgAAAAAAAAAcAA4AAgAAAAAAAAAcAA8AAgAAAAAAAAAdAAgAAgAAAAAAAAAdAAkAAgAAAAAAAAAdAAoAAgAAAAAAAAAdAAsAAgAAAAAAAAAdAAwAAgAAAAAAAAAdAA0AAgAAAAAAAAAdAA4AAgAAAAAAAAAdAA8AAgAAAAAAAAAeAAgAAgAAAAAAAAAeAAkAAgAAAAAAAAAeAAoAAgAAAAAAAAAeAAsAAgAAAAAAAAAeAAwAAgAAAAAAAAAeAA0AAgAAAAAAAAAeAA4AAgAAAAAAAAAeAA8AAgAAAAAAAAAfAAgAAgAAAAAAAAAfAAkAAgAAAAAAAAAfAAoAAgAAAAAAAAAfAAsAAgAAAAAAAAAfAAwAAgAAAAAAAAAfAA0AAgAAAAAAAAAfAA4AAgAAAAAAAAAfAA8AAgAAAAAAAAAAABUAAgAAAAAAAAAAABYAAgABAAAAAAAAABcAAgABAAEAAAABABUAAgAAAAAAAAABABYAAgACAAAAAAABABcAAgACAAEAAAACABUAAgAAAAAAAAACABYAAgADAAAAAAACABcAAgADAAEAAAADABUAAgAAAAAAAAADABYAAgAEAAAAAAADABcAAgAEAAEAAAAEABUAAgAAAAAAAAAEABYAAgABAAAAAAAEABcAAgABAAEAAAAFABUAAgAAAAAAAAAFABYAAgACAAAAAAAFABcAAgACAAEAAAAGABUAAgAAAAAAAAAGABYAAgADAAAAAAAGABcAAgADAAEAAAAHABUAAgAAAAAAAAAHABYAAgAEAAAAAAAHABcAAgAEAAEAAAAIABUAAgAAAAAAAAAIABYAAgABAAAAAAAIABcAAgABAAEAAAAJABUAAgAAAAAAAAAJABYAAgACAAAAAAAJABcAAgACAAEAAAAKABUAAgAAAAAAAAAKABYAAgADAAAAAAAKABcAAgADAAEAAAALABUAAgAAAAAAAAALABYAAgAEAAAAAAALABcAAgAEAAEAAAAMABUAAgAAAAAAAAAMABYAAgABAAAAAAAMABcAAgABAAEAAAANABUAAgAAAAAAAAANABYAAgACAAAAAAANABcAAgACAAEAAAAOABUAAgAAAAAAAAAOABYAAgADAAAAAAAOABcAAgADAAEAAAAPABUAAgAAAAAAAAAPABYAAgAEAAAAAAAPABcAAgAEAAEAAAAQABUAAgAAAAAAAAAQABYAAgABAAAAAAAQABcAAgABAAEAAAARABUAAgAAAAAAAAARABYAAgACAAAAAAARABcAAgACAAEAAAASABUAAgAAAAAAAAASABYAAgADAAAAAAASABcAAgADAAEAAAATABUAAgAAAAAAAAATABYAAgAEAAAAAAATABcAAgAEAAEAAAAUABUAAgAAAAAAAAAUABYAAgABAAAAAAAUABcAAgABAAEAAAAVABUAAgAAAAAAAAAVABYAAgACAAAAAAAVABcAAgACAAEAAAAWABUAAgAAAAAAAAAWABYAAgADAAAAAAAWABcAAgADAAEAAAAXABUAAgAAAAAAAAAXABYAAgAEAAAAAAAXABcAAgAEAAEAAAAYABUAAgAAAAAAAAAYABYAAgABAAAAAAAYABcAAgABAAEAAAAZABUAAgAAAAAAAAAZABYAAgACAAAAAAAZABcAAgACAAEAAAAaABUAAgAAAAAAAAAaABYAAgADAAAAAAAaABcAAgADAAEAAAAbABUAAgAAAAAAAAAbABYAAgAEAAAAAAAbABcAAgAEAAEAAAAcABUAAgAAAAAAAAAcABYAAgABAAAAAAAcABcAAgABAAEAAAAdABUAAgAAAAAAAAAdABYAAgACAAAAAAAdABcAAgACAAEAAAAeABUAAgAAAAAAAAAeABYAAgADAAAAAAAeABcAAgADAAEAAAAfABUAAgAAAAAAAAAfABYAAgAEAAAAAAAfABcAAgAEAAEAAAAAABMAAgAAAAAAAAAAABQAAgAAAAAAAAABABMAAgAAAAAAAAABABQAAgAAAAAAAAACABMAAgAAAAAAAAACABQAAgAAAAAAAAADABMAAgAAAAAAAAADABQAAgAAAAAAAAAEABMAAgAAAAAAAAAEABQAAgAAAAAAAAAFABMAAgAAAAAAAAAFABQAAgAAAAAAAAAGABMAAgAAAAAAAAAGABQAAgAAAAAAAAAHABMAAgAAAAAAAAAHABQAAgAAAAAAAAAIABMAAgAAAAAAAAAIABQAAgAAAAAAAAAJABMAAgAAAAAAAAAJABQAAgAAAAAAAAAKABMAAgAAAAAAAAAKABQAAgAAAAAAAAALABMAAgAAAAAAAAALABQAAgAAAAAAAAAMABMAAgAAAAAAAAAMABQAAgAAAAAAAAANABMAAgAAAAAAAAANABQAAgAAAAAAAAAOABMAAgAAAAAAAAAOABQAAgAAAAAAAAAPABMAAgAAAAAAAAAPABQAAgAAAAAAAAAQABMAAgAAAAAAAAAQABQAAgAAAAAAAAARABMAAgAAAAAAAAARABQAAgAAAAAAAAASABMAAgAAAAAAAAASABQAAgAAAAAAAAATABMAAgAAAAAAAAATABQAAgAAAAAAAAAUABMAAgAAAAAAAAAUABQAAgAAAAAAAAAVABMAAgAAAAAAAAAVABQAAgAAAAAAAAAWABMAAgAAAAAAAAAWABQAAgAAAAAAAAAXABMAAgAAAAAAAAAXABQAAgAAAAAAAAAYABMAAgAAAAAAAAAYABQAAgAAAAAAAAAZABMAAgAAAAAAAAAZABQAAgAAAAAAAAAaABMAAgAAAAAAAAAaABQAAgAAAAAAAAAbABMAAgAAAAAAAAAbABQAAgAAAAAAAAAcABMAAgAAAAAAAAAcABQAAgAAAAAAAAAdABMAAgAAAAAAAAAdABQAAgAAAAAAAAAeABMAAgAAAAAAAAAeABQAAgAAAAAAAAAfABMAAgAAAAAAAAAfABQAAgAAAAAAAAAAABAAAgAAAAAAAAAAABEAAgAAAAAAAAAAABIAAgAAAAAAAAABABAAAgAAAAAAAAABABEAAgAAAAAAAAABABIAAgAAAAAAAAACABAAAgAAAAAAAAACABEAAgAAAAAAAAACABIAAgAAAAAAAAADABAAAgAAAAAAAAADABEAAgAAAAAAAAADABIAAgAAAAAAAAAEABAAAgAAAAAAAAAEABEAAgAAAAAAAAAEABIAAgAAAAAAAAAFABAAAgAAAAAAAAAFABEAAgAAAAAAAAAFABIAAgAAAAAAAAAGABAAAgAAAAAAAAAGABEAAgAAAAAAAAAGABIAAgAAAAAAAAAHABAAAgAAAAAAAAAHABEAAgAAAAAAAAAHABIAAgAAAAAAAAAIABAAAgAAAAAAAAAIABEAAgAAAAAAAAAIABIAAgAAAAAAAAAJABAAAgAAAAAAAAAJABEAAgAAAAAAAAAJABIAAgAAAAAAAAAKABAAAgAAAAAAAAAKABEAAgAAAAAAAAAKABIAAgAAAAAAAAALABAAAgAAAAAAAAALABEAAgAAAAAAAAALABIAAgAAAAAAAAAMABAAAgAAAAAAAAAMABEAAgAAAAAAAAAMABIAAgAAAAAAAAANABAAAgAAAAAAAAANABEAAgAAAAAAAAANABIAAgAAAAAAAAAOABAAAgAAAAAAAAAOABEAAgAAAAAAAAAOABIAAgAAAAAAAAAPABAAAgAAAAAAAAAPABEAAgAAAAAAAAAPABIAAgAAAAAAAAAQABAAAgAAAAAAAAAQABEAAgAAAAAAAAAQABIAAgAAAAAAAAARABAAAgAAAAAAAAARABEAAgAAAAAAAAARABIAAgAAAAAAAAASABAAAgAAAAAAAAASABEAAgAAAAAAAAASABIAAgAAAAAAAAATABAAAgAAAAAAAAATABEAAgAAAAAAAAATABIAAgAAAAAAAAAUABAAAgAAAAAAAAAUABEAAgAAAAAAAAAUABIAAgAAAAAAAAAVABAAAgAAAAAAAAAVABEAAgAAAAAAAAAVABIAAgAAAAAAAAAWABAAAgAAAAAAAAAWABEAAgAAAAAAAAAWABIAAgAAAAAAAAAXABAAAgAAAAAAAAAXABEAAgAAAAAAAAAXABIAAgAAAAAAAAAYABAAAgAAAAAAAAAYABEAAgAAAAAAAAAYABIAAgAAAAAAAAAZABAAAgAAAAAAAAAZABEAAgAAAAAAAAAZABIAAgAAAAAAAAAaABAAAgAAAAAAAAAaABEAAgAAAAAAAAAaABIAAgAAAAAAAAAbABAAAgAAAAAAAAAbABEAAgAAAAAAAAAbABIAAgAAAAAAAAAcABAAAgAAAAAAAAAcABEAAgAAAAAAAAAcABIAAgAAAAAAAAAdABAAAgAAAAAAAAAdABEAAgAAAAAAAAAdABIAAgAAAAAAAAAeABAAAgAAAAAAAAAeABEAAgAAAAAAAAAeABIAAgAAAAAAAAAfABAAAgAAAAAAAAAfABEAAgAAAAAAAAAfABIAAgAAAAAAAAAAABgAAgAAAAEAAAAAABkAAgAAAAEAAAAAABoAAgAAAAEAAAAAABsAAgAAAAEAAAAAABwAAgAAAAEAAAAAAB0AAgAAAAEAAAAAAB4AAgAAAAEAAAAAAB8AAgAAAAEAAAABABgAAgAAAAEAAAABABkAAgAAAAEAAAABABoAAgAAAAEAAAABABsAAgAAAAEAAAABABwAAgAAAAEAAAABAB0AAgAAAAEAAAABAB4AAgAAAAEAAAABAB8AAgAAAAEAAAACABgAAgAAAAEAAAACABkAAgAAAAEAAAACABoAAgAAAAEAAAACABsAAgAAAAEAAAACABwAAgAAAAEAAAACAB0AAgAAAAEAAAACAB4AAgAAAAEAAAACAB8AAgAAAAEAAAADABgAAgAAAAEAAAADABkAAgAAAAEAAAADABoAAgAAAAEAAAADABsAAgAAAAEAAAADABwAAgAAAAEAAAADAB0AAgAAAAEAAAADAB4AAgAAAAEAAAADAB8AAgAAAAEAAAAEABgAAgAAAAEAAAAEABkAAgAAAAEAAAAEABoAAgAAAAEAAAAEABsAAgAAAAEAAAAEABwAAgAAAAEAAAAEAB0AAgAAAAEAAAAEAB4AAgAAAAEAAAAEAB8AAgAAAAEAAAAFABgAAgAAAAEAAAAFABkAAgAAAAEAAAAFABoAAgAAAAEAAAAFABsAAgAAAAEAAAAFABwAAgAAAAEAAAAFAB0AAgAAAAEAAAAFAB4AAgAAAAEAAAAFAB8AAgAAAAEAAAAGABgAAgAAAAEAAAAGABkAAgAAAAEAAAAGABoAAgAAAAEAAAAGABsAAgAAAAEAAAAGABwAAgAAAAEAAAAGAB0AAgAAAAEAAAAGAB4AAgAAAAEAAAAGAB8AAgAAAAEAAAAHABgAAgAAAAEAAAAHABkAAgAAAAEAAAAHABoAAgAAAAEAAAAHABsAAgAAAAEAAAAHABwAAgAAAAEAAAAHAB0AAgAAAAEAAAAHAB4AAgAAAAEAAAAHAB8AAgAAAAEAAAAIABgAAgAAAAEAAAAIABkAAgAAAAEAAAAIABoAAgAAAAEAAAAIABsAAgAAAAEAAAAIABwAAgAAAAEAAAAIAB0AAgAAAAEAAAAIAB4AAgAAAAEAAAAIAB8AAgAAAAEAAAAJABgAAgAAAAEAAAAJABkAAgAAAAEAAAAJABoAAgAAAAEAAAAJABsAAgAAAAEAAAAJABwAAgAAAAEAAAAJAB0AAgAAAAEAAAAJAB4AAgAAAAEAAAAJAB8AAgAAAAEAAAAKABgAAgAAAAEAAAAKABkAAgAAAAEAAAAKABoAAgAAAAEAAAAKABsAAgAAAAEAAAAKABwAAgAAAAEAAAAKAB0AAgAAAAEAAAAKAB4AAgAAAAEAAAAKAB8AAgAAAAEAAAALABgAAgAAAAEAAAALABkAAgAAAAEAAAALABoAAgAAAAEAAAALABsAAgAAAAEAAAALABwAAgAAAAEAAAALAB0AAgAAAAEAAAALAB4AAgAAAAEAAAALAB8AAgAAAAEAAAAMABgAAgAAAAEAAAAMABkAAgAAAAEAAAAMABoAAgAAAAEAAAAMABsAAgAAAAEAAAAMABwAAgAAAAEAAAAMAB0AAgAAAAEAAAAMAB4AAgAAAAEAAAAMAB8AAgAAAAEAAAANABgAAgAAAAEAAAANABkAAgAAAAEAAAANABoAAgAAAAEAAAANABsAAgAAAAEAAAANABwAAgAAAAEAAAANAB0AAgAAAAEAAAANAB4AAgAAAAEAAAANAB8AAgAAAAEAAAAOABgAAgAAAAEAAAAOABkAAgAAAAEAAAAOABoAAgAAAAEAAAAOABsAAgAAAAEAAAAOABwAAgAAAAEAAAAOAB0AAgAAAAEAAAAOAB4AAgAAAAEAAAAOAB8AAgAAAAEAAAAPABgAAgAAAAEAAAAPABkAAgAAAAEAAAAPABoAAgAAAAEAAAAPABsAAgAAAAEAAAAPABwAAgAAAAEAAAAPAB0AAgAAAAEAAAAPAB4AAgAAAAEAAAAPAB8AAgAAAAEAAAAQABgAAgAAAAEAAAAQABkAAgAAAAEAAAAQABoAAgAAAAEAAAAQABsAAgAAAAEAAAAQABwAAgAAAAEAAAAQAB0AAgAAAAEAAAAQAB4AAgAAAAEAAAAQAB8AAgAAAAEAAAARABgAAgAAAAEAAAARABkAAgAAAAEAAAARABoAAgAAAAEAAAARABsAAgAAAAEAAAARABwAAgAAAAEAAAARAB0AAgAAAAEAAAARAB4AAgAAAAEAAAARAB8AAgAAAAEAAAASABgAAgAAAAEAAAASABkAAgAAAAEAAAASABoAAgAAAAEAAAASABsAAgAAAAEAAAASABwAAgAAAAEAAAASAB0AAgAAAAEAAAASAB4AAgAAAAEAAAASAB8AAgAAAAEAAAATABgAAgAAAAEAAAATABkAAgAAAAEAAAATABoAAgAAAAEAAAATABsAAgAAAAEAAAATABwAAgAAAAEAAAATAB0AAgAAAAEAAAATAB4AAgAAAAEAAAATAB8AAgAAAAEAAAAUABgAAgAAAAEAAAAUABkAAgAAAAEAAAAUABoAAgAAAAEAAAAUABsAAgAAAAEAAAAUABwAAgAAAAEAAAAUAB0AAgAAAAEAAAAUAB4AAgAAAAEAAAAUAB8AAgAAAAEAAAAVABgAAgAAAAEAAAAVABkAAgAAAAEAAAAVABoAAgAAAAEAAAAVABsAAgAAAAEAAAAVABwAAgAAAAEAAAAVAB0AAgAAAAEAAAAVAB4AAgAAAAEAAAAVAB8AAgAAAAEAAAAWABgAAgAAAAEAAAAWABkAAgAAAAEAAAAWABoAAgAAAAEAAAAWABsAAgAAAAEAAAAWABwAAgAAAAEAAAAWAB0AAgAAAAEAAAAWAB4AAgAAAAEAAAAWAB8AAgAAAAEAAAAXABgAAgAAAAEAAAAXABkAAgAAAAEAAAAXABoAAgAAAAEAAAAXABsAAgAAAAEAAAAXABwAAgAAAAEAAAAXAB0AAgAAAAEAAAAXAB4AAgAAAAEAAAAXAB8AAgAAAAEAAAAYABgAAgAAAAEAAAAYABkAAgAAAAEAAAAYABoAAgAAAAEAAAAYABsAAgAAAAEAAAAYABwAAgAAAAEAAAAYAB0AAgAAAAEAAAAYAB4AAgAAAAEAAAAYAB8AAgAAAAEAAAAZABgAAgAAAAEAAAAZABkAAgAAAAEAAAAZABoAAgAAAAEAAAAZABsAAgAAAAEAAAAZABwAAgAAAAEAAAAZAB0AAgAAAAEAAAAZAB4AAgAAAAEAAAAZAB8AAgAAAAEAAAAaABgAAgAAAAEAAAAaABkAAgAAAAEAAAAaABoAAgAAAAEAAAAaABsAAgAAAAEAAAAaABwAAgAAAAEAAAAaAB0AAgAAAAEAAAAaAB4AAgAAAAEAAAAaAB8AAgAAAAEAAAAbABgAAgAAAAEAAAAbABkAAgAAAAEAAAAbABoAAgAAAAEAAAAbABsAAgAAAAEAAAAbABwAAgAAAAEAAAAbAB0AAgAAAAEAAAAbAB4AAgAAAAEAAAAbAB8AAgAAAAEAAAAcABgAAgAAAAEAAAAcABkAAgAAAAEAAAAcABoAAgAAAAEAAAAcABsAAgAAAAEAAAAcABwAAgAAAAEAAAAcAB0AAgAAAAEAAAAcAB4AAgAAAAEAAAAcAB8AAgAAAAEAAAAdABgAAgAAAAEAAAAdABkAAgAAAAEAAAAdABoAAgAAAAEAAAAdABsAAgAAAAEAAAAdABwAAgAAAAEAAAAdAB0AAgAAAAEAAAAdAB4AAgAAAAEAAAAdAB8AAgAAAAEAAAAeABgAAgAAAAEAAAAeABkAAgAAAAEAAAAeABoAAgAAAAEAAAAeABsAAgAAAAEAAAAeABwAAgAAAAEAAAAeAB0AAgAAAAEAAAAeAB4AAgAAAAEAAAAeAB8AAgAAAAEAAAAfABgAAgAAAAEAAAAfABkAAgAAAAEAAAAfABoAAgAAAAEAAAAfABsAAgAAAAEAAAAfABwAAgAAAAEAAAAfAB0AAgAAAAEAAAAfAB4AAgAAAAEAAAAfAB8AAgAAAAEAAAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAABAAAAAgAAAAAAAAABAAEAAgAAAAAAAAABAAIAAgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAABAAUAAgAAAAAAAAABAAYAAgAAAAAAAAABAAcAAgAAAAAAAAACAAAAAgAAAAAAAAACAAEAAgAAAAAAAAACAAIAAgAAAAAAAAACAAMAAgAAAAAAAAACAAQAAgAAAAAAAAACAAUAAgAAAAAAAAACAAYAAgAAAAAAAAACAAcAAgAAAAAAAAADAAAAAgAAAAAAAAADAAEAAgAAAAAAAAADAAIAAgAAAAAAAAADAAMAAgAAAAAAAAADAAQAAgAAAAAAAAADAAUAAgAAAAAAAAADAAYAAgAAAAAAAAADAAcAAgAAAAAAAAAEAAAAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAcAAgAAAAAAAAAFAAAAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAcAAgAAAAAAAAAGAAAAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAcAAgAAAAAAAAAHAAAAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAUAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAcAAgAAAAAAAAAIAAAAAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAUAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAcAAgAAAAAAAAAJAAAAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAUAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAcAAgAAAAAAAAAKAAAAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAMAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAcAAgAAAAAAAAALAAAAAgAAAAAAAAALAAEAAgAAAAAAAAALAAIAAgAAAAAAAAALAAMAAgAAAAAAAAALAAQAAgAAAAAAAAALAAUAAgAAAAAAAAALAAYAAgAAAAAAAAALAAcAAgAAAAAAAAAMAAAAAgAAAAAAAAAMAAEAAgAAAAAAAAAMAAIAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAQAAgAAAAAAAAAMAAUAAgAAAAAAAAAMAAYAAgAAAAAAAAAMAAcAAgAAAAAAAAANAAAAAgAAAAAAAAANAAEAAgAAAAAAAAANAAIAAgAAAAAAAAANAAMAAgAAAAAAAAANAAQAAgAAAAAAAAANAAUAAgAAAAAAAAANAAYAAgAAAAAAAAANAAcAAgAAAAAAAAAOAAAAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAcAAgAAAAAAAAAPAAAAAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAMAAgAAAAAAAAAPAAQAAgAAAAAAAAAPAAUAAgAAAAAAAAAPAAYAAgAAAAAAAAAPAAcAAgAAAAAAAAAQAAAAAgAAAAAAAAAQAAEAAgAAAAAAAAAQAAIAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAQAAgAAAAAAAAAQAAUAAgAAAAAAAAAQAAYAAgAAAAAAAAAQAAcAAgAAAAAAAAARAAAAAgAAAAAAAAARAAEAAgAAAAAAAAARAAIAAgAAAAAAAAARAAMAAgAAAAAAAAARAAQAAgAAAAAAAAARAAUAAgAAAAAAAAARAAYAAgAAAAAAAAARAAcAAgAAAAAAAAASAAAAAgAAAAAAAAASAAEAAgAAAAAAAAASAAIAAgAAAAAAAAASAAMAAgAAAAAAAAASAAQAAgAAAAAAAAASAAUAAgAAAAAAAAASAAYAAgAAAAAAAAASAAcAAgAAAAAAAAATAAAAAgAAAAAAAAATAAEAAgAAAAAAAAATAAIAAgAAAAAAAAATAAMAAgAAAAAAAAATAAQAAgAAAAAAAAATAAUAAgAAAAAAAAATAAYAAgAAAAAAAAATAAcAAgAAAAAAAAAUAAAAAgAAAAAAAAAUAAEAAgAAAAAAAAAUAAIAAgAAAAAAAAAUAAMAAgAAAAAAAAAUAAQAAgAAAAAAAAAUAAUAAgAAAAAAAAAUAAYAAgAAAAAAAAAUAAcAAgAAAAAAAAAVAAAAAgAAAAAAAAAVAAEAAgAAAAAAAAAVAAIAAgAAAAAAAAAVAAMAAgAAAAAAAAAVAAQAAgAAAAAAAAAVAAUAAgAAAAAAAAAVAAYAAgAAAAAAAAAVAAcAAgAAAAAAAAAWAAAAAgAAAAAAAAAWAAEAAgAAAAAAAAAWAAIAAgAAAAAAAAAWAAMAAgAAAAAAAAAWAAQAAgAAAAAAAAAWAAUAAgAAAAAAAAAWAAYAAgAAAAAAAAAWAAcAAgAAAAAAAAAXAAAAAgAAAAAAAAAXAAEAAgAAAAAAAAAXAAIAAgAAAAAAAAAXAAMAAgAAAAAAAAAXAAQAAgAAAAAAAAAXAAUAAgAAAAAAAAAXAAYAAgAAAAAAAAAXAAcAAgAAAAAAAAAYAAAAAgAAAAAAAAAYAAEAAgAAAAAAAAAYAAIAAgAAAAAAAAAYAAMAAgAAAAAAAAAYAAQAAgAAAAAAAAAYAAUAAgAAAAAAAAAYAAYAAgAAAAAAAAAYAAcAAgAAAAAAAAAZAAAAAgAAAAAAAAAZAAEAAgAAAAAAAAAZAAIAAgAAAAAAAAAZAAMAAgAAAAAAAAAZAAQAAgAAAAAAAAAZAAUAAgAAAAAAAAAZAAYAAgAAAAAAAAAZAAcAAgAAAAAAAAAaAAAAAgAAAAAAAAAaAAEAAgAAAAAAAAAaAAIAAgAAAAAAAAAaAAMAAgAAAAAAAAAaAAQAAgAAAAAAAAAaAAUAAgAAAAAAAAAaAAYAAgAAAAAAAAAaAAcAAgAAAAAAAAAbAAAAAgAAAAAAAAAbAAEAAgAAAAAAAAAbAAIAAgAAAAAAAAAbAAMAAgAAAAAAAAAbAAQAAgAAAAAAAAAbAAUAAgAAAAAAAAAbAAYAAgAAAAAAAAAbAAcAAgAAAAAAAAAcAAAAAgAAAAAAAAAcAAEAAgAAAAAAAAAcAAIAAgAAAAAAAAAcAAMAAgAAAAAAAAAcAAQAAgAAAAAAAAAcAAUAAgAAAAAAAAAcAAYAAgAAAAAAAAAcAAcAAgAAAAAAAAAdAAAAAgAAAAAAAAAdAAEAAgAAAAAAAAAdAAIAAgAAAAAAAAAdAAMAAgAAAAAAAAAdAAQAAgAAAAAAAAAdAAUAAgAAAAAAAAAdAAYAAgAAAAAAAAAdAAcAAgAAAAAAAAAeAAAAAgAAAAAAAAAeAAEAAgAAAAAAAAAeAAIAAgAAAAAAAAAeAAMAAgAAAAAAAAAeAAQAAgAAAAAAAAAeAAUAAgAAAAAAAAAeAAYAAgAAAAAAAAAeAAcAAgAAAAAAAAAfAAAAAgAAAAAAAAAfAAEAAgAAAAAAAAAfAAIAAgAAAAAAAAAfAAMAAgAAAAAAAAAfAAQAAgAAAAAAAAAfAAUAAgAAAAAAAAAfAAYAAgAAAAAAAAAfAAcAAgAAAAAAAAA=")
tile_set = ExtResource("1_1wc77")

[node name="StarsA" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(512, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="StarsA"]
tile_map_data = PackedByteArray("AAAEAAkAAgALAAAAADAGAAkAAgAJAAAAAAALAAgAAgAPAAAAACAOAAkAAgAPAAEAAAAPAAsAAgAPAAAAAAADAAkAAgAAAAAAAAACAAkAAgAAAAAAAAABAAkAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAgAAgAAAAAAAAABAAgAAgAAAAAAAAACAAgAAgAAAAAAAAADAAgAAgAAAAAAAAAEAAgAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAkAAgAAAAAAAAAGAAgAAgAAAAAAAAAHAAgAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAoAAgAAAAAAAAAGAAoAAgAAAAAAAAAFAAoAAgAAAAAAAAAEAAoAAgAAAAAAAAADAAoAAgAFAAAAAAACAAoAAgAAAAAAAAABAAoAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAsAAgAAAAAAAAABAAsAAgAAAAAAAAACAAsAAgAAAAAAAAADAAsAAgAAAAAAAAAEAAsAAgAAAAAAAAAFAAsAAgAAAAAAAAAGAAsAAgAAAAAAAAAHAAsAAgAAAAAAAAAIAAsAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAkAAgAAAAAAAAAIAAgAAgAAAAAAAAAJAAgAAgAAAAAAAAAKAAgAAgAAAAAAAAAMAAgAAgAAAAAAAAANAAgAAgAAAAAAAAAOAAgAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAkAAgAAAAAAAAAPAAoAAgAAAAAAAAAOAAoAAgAAAAAAAAANAAoAAgAAAAAAAAANAAkAAgAAAAAAAAAMAAkAAgAAAAAAAAALAAkAAgAAAAAAAAAKAAkAAgAAAAAAAAAJAAkAAgAAAAAAAAAJAAoAAgAAAAAAAAAKAAoAAgAAAAAAAAALAAoAAgAAAAAAAAAMAAoAAgAAAAAAAAAOAAsAAgAAAAAAAAANAAsAAgAAAAAAAAAMAAsAAgAAAAAAAAALAAsAAgAAAAAAAAAKAAsAAgAAAAAAAAAJAAsAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAAQAAoAAgAAAAAAAAAQAAsAAgAAAAAAAAARAAgAAgAAAAAAAAARAAkAAgAAAAAAAAARAAoAAgAAAAAAAAARAAsAAgAAAAAAAAASAAgAAgAAAAAAAAASAAkAAgAAAAAAAAASAAoAAgAAAAAAAAASAAsAAgAAAAAAAAATAAgAAgAAAAAAAAATAAkAAgAAAAAAAAATAAoAAgAFAAAAAAATAAsAAgAAAAAAAAAUAAgAAgAAAAAAAAAUAAkAAgALAAAAADAUAAoAAgAAAAAAAAAUAAsAAgAAAAAAAAAVAAgAAgAAAAAAAAAVAAkAAgAAAAAAAAAVAAoAAgAAAAAAAAAVAAsAAgAAAAAAAAAWAAgAAgAAAAAAAAAWAAkAAgAJAAAAAAAWAAoAAgAAAAAAAAAWAAsAAgAAAAAAAAAXAAgAAgAAAAAAAAAXAAkAAgAAAAAAAAAXAAoAAgAAAAAAAAAXAAsAAgAAAAAAAAAYAAgAAgAAAAAAAAAYAAkAAgAAAAAAAAAYAAoAAgAAAAAAAAAYAAsAAgAAAAAAAAAZAAgAAgAAAAAAAAAZAAkAAgAAAAAAAAAZAAoAAgAAAAAAAAAZAAsAAgAAAAAAAAAaAAgAAgAAAAAAAAAaAAkAAgAAAAAAAAAaAAoAAgAAAAAAAAAaAAsAAgAAAAAAAAAbAAgAAgAPAAAAACAbAAkAAgAAAAAAAAAbAAoAAgAAAAAAAAAbAAsAAgAAAAAAAAAcAAgAAgAAAAAAAAAcAAkAAgAAAAAAAAAcAAoAAgAAAAAAAAAcAAsAAgAAAAAAAAAdAAgAAgAAAAAAAAAdAAkAAgAAAAAAAAAdAAoAAgAAAAAAAAAdAAsAAgAAAAAAAAAeAAgAAgAAAAAAAAAeAAkAAgAPAAEAAAAeAAoAAgAAAAAAAAAeAAsAAgAAAAAAAAAfAAgAAgAAAAAAAAAfAAkAAgAAAAAAAAAfAAoAAgAAAAAAAAAfAAsAAgAPAAAAAAAAAAwAAgAAAAAAAAAAAA0AAgAAAAAAAAABAAwAAgAAAAAAAAABAA0AAgALAAEAAAACAAwAAgAAAAAAAAACAA0AAgAAAAAAAAADAAwAAgAPAAEAABADAA0AAgAAAAAAAAAEAAwAAgAAAAAAAAAEAA0AAgAAAAAAAAAFAAwAAgAAAAAAAAAFAA0AAgALAAAAADAGAAwAAgAAAAAAAAAGAA0AAgAAAAAAAAAHAAwAAgAAAAAAAAAHAA0AAgAAAAAAAAAIAAwAAgAAAAAAAAAIAA0AAgAAAAAAAAAJAAwAAgAAAAAAAAAJAA0AAgAPAAEAABAKAAwAAgAJAAAAACAKAA0AAgAAAAAAAAALAAwAAgAAAAAAAAALAA0AAgAAAAAAAAAMAAwAAgAAAAAAAAAMAA0AAgAAAAAAAAANAAwAAgAAAAAAAAANAA0AAgAAAAAAAAAOAAwAAgAAAAAAAAAOAA0AAgAAAAAAAAAPAAwAAgAAAAAAAAAPAA0AAgAAAAAAAAAQAAwAAgAAAAAAAAAQAA0AAgAAAAAAAAARAAwAAgAAAAAAAAARAA0AAgALAAEAAAASAAwAAgAAAAAAAAASAA0AAgAAAAAAAAATAAwAAgAPAAEAABATAA0AAgAAAAAAAAAUAAwAAgAAAAAAAAAUAA0AAgAAAAAAAAAVAAwAAgAAAAAAAAAVAA0AAgALAAAAADAWAAwAAgAAAAAAAAAWAA0AAgAAAAAAAAAXAAwAAgAAAAAAAAAXAA0AAgAAAAAAAAAYAAwAAgAAAAAAAAAYAA0AAgAAAAAAAAAZAAwAAgAAAAAAAAAZAA0AAgAPAAEAABAaAAwAAgAJAAAAACAaAA0AAgAAAAAAAAAbAAwAAgAAAAAAAAAbAA0AAgAAAAAAAAAcAAwAAgAAAAAAAAAcAA0AAgAAAAAAAAAdAAwAAgAAAAAAAAAdAA0AAgAAAAAAAAAeAAwAAgAAAAAAAAAeAA0AAgAAAAAAAAAfAAwAAgAAAAAAAAAfAA0AAgAAAAAAAAA=")
tile_set = ExtResource("1_1wc77")

[node name="StarsB" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(512, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="StarsB"]
tile_map_data = PackedByteArray("AAAAAA4AAgAAAAAAAAAAAA8AAgAAAAAAAAAAABAAAgAAAAAAAAABAA4AAgAAAAAAAAABAA8AAgAPAAAAACABABAAAgAAAAAAAAACAA4AAgAAAAAAAAACAA8AAgAAAAAAAAACABAAAgAPAAAAACADAA4AAgAAAAAAAAADAA8AAgAAAAAAAAADABAAAgAAAAAAAAAEAA4AAgAAAAAAAAAEAA8AAgAPAAAAAAAEABAAAgAAAAAAAAAFAA4AAgAAAAAAAAAFAA8AAgAAAAAAAAAFABAAAgAAAAAAAAAGAA4AAgAAAAAAAAAGAA8AAgAAAAAAAAAGABAAAgAAAAAAAAAHAA4AAgAAAAAAAAAHAA8AAgAAAAAAAAAHABAAAgAPAAEAAAAIAA4AAgAAAAAAAAAIAA8AAgAAAAAAAAAIABAAAgAAAAAAAAAJAA4AAgAAAAAAAAAJAA8AAgAAAAAAAAAJABAAAgAAAAAAAAAKAA4AAgAAAAAAAAAKAA8AAgAAAAAAAAAKABAAAgAAAAAAAAALAA4AAgAAAAAAAAALAA8AAgAAAAAAAAALABAAAgALAAAAADAMAA4AAgAAAAAAAAAMAA8AAgAAAAAAAAAMABAAAgAAAAAAAAANAA4AAgAAAAAAAAANAA8AAgAPAAAAAAANABAAAgAAAAAAAAAOAA4AAgALAAAAADAOAA8AAgAAAAAAAAAOABAAAgAAAAAAAAAPAA4AAgAAAAAAAAAPAA8AAgAAAAAAAAAPABAAAgAAAAAAAAAQAA4AAgAAAAAAAAAQAA8AAgAAAAAAAAAQABAAAgAAAAAAAAARAA4AAgAAAAAAAAARAA8AAgAPAAAAACARABAAAgAAAAAAAAASAA4AAgAAAAAAAAASAA8AAgAAAAAAAAASABAAAgAPAAAAACATAA4AAgAAAAAAAAATAA8AAgAAAAAAAAATABAAAgAAAAAAAAAUAA4AAgAAAAAAAAAUAA8AAgAPAAAAAAAUABAAAgAAAAAAAAAVAA4AAgAAAAAAAAAVAA8AAgAAAAAAAAAVABAAAgAAAAAAAAAWAA4AAgAAAAAAAAAWAA8AAgAAAAAAAAAWABAAAgAAAAAAAAAXAA4AAgAAAAAAAAAXAA8AAgAAAAAAAAAXABAAAgAPAAEAAAAYAA4AAgAAAAAAAAAYAA8AAgAAAAAAAAAYABAAAgAAAAAAAAAZAA4AAgAAAAAAAAAZAA8AAgAAAAAAAAAZABAAAgAAAAAAAAAaAA4AAgAAAAAAAAAaAA8AAgAAAAAAAAAaABAAAgAAAAAAAAAbAA4AAgAAAAAAAAAbAA8AAgAAAAAAAAAbABAAAgALAAAAADAcAA4AAgAAAAAAAAAcAA8AAgAAAAAAAAAcABAAAgAAAAAAAAAdAA4AAgAAAAAAAAAdAA8AAgAPAAAAAAAdABAAAgAAAAAAAAAeAA4AAgALAAAAADAeAA8AAgAAAAAAAAAeABAAAgAAAAAAAAAfAA4AAgAAAAAAAAAfAA8AAgAAAAAAAAAfABAAAgAAAAAAAAA=")
tile_set = ExtResource("1_1wc77")

[node name="StarsC" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(512, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="StarsC"]
tile_map_data = PackedByteArray("AAAAABEAAgAJAAAAAAAAABIAAgAAAAAAAAABABEAAgAAAAAAAAABABIAAgAPAAEAAAACABEAAgALAAAAADACABIAAgAPAAAAAAADABEAAgAAAAAAAAADABIAAgAAAAAAAAAEABEAAgAPAAAAAAAEABIAAgAAAAAAAAAFABEAAgAAAAAAAAAFABIAAgAAAAAAAAAGABEAAgAAAAAAAAAGABIAAgAAAAAAAAAHABEAAgAAAAAAAAAHABIAAgAAAAAAAAAIABEAAgALAAAAAAAIABIAAgAAAAAAAAAJABEAAgALAAEAADAJABIAAgAAAAAAAAAKABEAAgAJAAAAACAKABIAAgAPAAAAACALABEAAgAAAAAAAAALABIAAgAAAAAAAAAMABEAAgAPAAAAAAAMABIAAgAAAAAAAAANABEAAgAAAAAAAAANABIAAgALAAAAAAAOABEAAgAPAAEAAAAOABIAAgAAAAAAAAAPABEAAgAAAAAAAAAPABIAAgAAAAAAAAAQABEAAgAJAAAAAAAQABIAAgAAAAAAAAARABEAAgAAAAAAAAARABIAAgAPAAEAAAASABEAAgALAAAAADASABIAAgAPAAAAAAATABEAAgAAAAAAAAATABIAAgAAAAAAAAAUABEAAgAPAAAAAAAUABIAAgAAAAAAAAAVABEAAgAAAAAAAAAVABIAAgAAAAAAAAAWABEAAgAAAAAAAAAWABIAAgAAAAAAAAAXABEAAgAAAAAAAAAXABIAAgAAAAAAAAAYABEAAgALAAAAAAAYABIAAgAAAAAAAAAZABEAAgALAAEAADAZABIAAgAAAAAAAAAaABEAAgAJAAAAACAaABIAAgAPAAAAACAbABEAAgAAAAAAAAAbABIAAgAAAAAAAAAcABEAAgAPAAAAAAAcABIAAgAAAAAAAAAdABEAAgAAAAAAAAAdABIAAgALAAAAAAAeABEAAgAPAAEAAAAeABIAAgAAAAAAAAAfABEAAgAAAAAAAAAfABIAAgAAAAAAAAA=")
tile_set = ExtResource("1_1wc77")

[node name="StarsD" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(512, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="StarsD"]
tile_map_data = PackedByteArray("AAAAABMAAgAAAAAAAAABABMAAgAAAAAAAAACABMAAgAAAAAAAAADABMAAgAAAAAAAAAEABMAAgAPAAAAAAAFABMAAgAAAAAAAAAGABMAAgAAAAAAAAAHABMAAgAAAAAAAAAIABMAAgAAAAAAAAAJABMAAgAAAAAAAAAKABMAAgAAAAAAAAALABMAAgAAAAAAAAAMABMAAgAAAAAAAAANABMAAgAAAAAAAAAOABMAAgAAAAAAAAAPABMAAgAAAAAAAAAQABMAAgAAAAAAAAARABMAAgAAAAAAAAASABMAAgAAAAAAAAATABMAAgAAAAAAAAAUABMAAgAPAAAAAAAVABMAAgAAAAAAAAAWABMAAgAAAAAAAAAXABMAAgAAAAAAAAAYABMAAgAAAAAAAAAZABMAAgAAAAAAAAAaABMAAgAAAAAAAAAbABMAAgAAAAAAAAAcABMAAgAAAAAAAAAdABMAAgAAAAAAAAAeABMAAgAAAAAAAAAfABMAAgAAAAAAAAA=")
tile_set = ExtResource("1_1wc77")

[node name="StarsE" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(512, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="StarsE"]
tile_map_data = PackedByteArray("AAAAABQAAgAPAAAAACABABQAAgAAAAAAAAACABQAAgAAAAAAAAADABQAAgAAAAAAAAAEABQAAgALAAAAAAAFABQAAgAAAAAAAAAGABQAAgAPAAAAAAAHABQAAgAAAAAAAAAIABQAAgAAAAAAAAAJABQAAgAPAAAAACAKABQAAgAAAAAAAAALABQAAgAPAAEAAAAMABQAAgAAAAAAAAANABQAAgAAAAAAAAAOABQAAgAJAAAAACAPABQAAgAAAAAAAAAQABQAAgAPAAAAACARABQAAgAAAAAAAAASABQAAgAAAAAAAAATABQAAgAAAAAAAAAUABQAAgALAAAAAAAVABQAAgAAAAAAAAAWABQAAgAPAAAAAAAXABQAAgAAAAAAAAAYABQAAgAAAAAAAAAZABQAAgAPAAAAACAaABQAAgAAAAAAAAAbABQAAgAPAAEAAAAcABQAAgAAAAAAAAAdABQAAgAAAAAAAAAeABQAAgAJAAAAACAfABQAAgAAAAAAAAA=")
tile_set = ExtResource("1_1wc77")

[node name="StarsF" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(512, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="StarsF"]
tile_map_data = PackedByteArray("AAAPABUAAgAPAAAAACANABUAAgALAAAAABACABUAAgAJAAAAAAABABUAAgAAAAAAAAAAABUAAgAAAAAAAAADABUAAgAAAAAAAAAEABUAAgAAAAAAAAAFABUAAgAAAAAAAAAGABUAAgAAAAAAAAAHABUAAgAAAAAAAAAIABUAAgAAAAAAAAAJABUAAgAAAAAAAAAKABUAAgAAAAAAAAALABUAAgAAAAAAAAAMABUAAgAAAAAAAAAOABUAAgAAAAAAAAAQABUAAgAAAAAAAAARABUAAgAAAAAAAAASABUAAgAJAAAAAAATABUAAgAAAAAAAAAUABUAAgAAAAAAAAAVABUAAgAAAAAAAAAWABUAAgAAAAAAAAAXABUAAgAAAAAAAAAYABUAAgAAAAAAAAAZABUAAgAAAAAAAAAaABUAAgAAAAAAAAAbABUAAgAAAAAAAAAcABUAAgAAAAAAAAAdABUAAgALAAAAABAeABUAAgAAAAAAAAAfABUAAgAPAAAAACA=")
tile_set = ExtResource("1_1wc77")
